# cs225a-proj

./: CMakeLists.txt  control_robot.cpp  controller.cpp  final_proj.cpp  human_leg.urdf  human_leg_right.urdf  leg_trajectory.cpp  panda_arm.urdf  panda_arm_hand.urdf  simviz_fp.cpp  world.urdf
cad_files/: gripper_soft.mtl  sphere.mtl  table.mtl
outputs/: ee_trajectories.txt  leg_joint_outputs.txt  leg_trajectory_plot.ipynb  plots.py
